# landmapy

./: .gitignore  README.md  _quarto.yml  earthpy.qmd  notes.md  notes.qmd  notes_class.qmd  notes_fuzzy.qmd  notes_gbif.qmd  notes_project.md  package.ipynb  plots.md  pyproject.toml  references.md  strategy.md  usgs_white_river.ipynb  usgs_white_river.md  usgs_white_river.qmd
envsys/: example.py  process_cloud_mask.py  process_image.py
landmapy/: __init__.py  cached.py  delta.py  earthaccess.py  explore.py  gbif.py  gvplot.py  habitat.py  hvplot.py  index.py  initial.py  naip.py  plot.py  polaris.py  process.py  process_cloud_mask.py  process_image.py  redline.py  reflect.py  reflectance.py  srtm.py  thredds.py  usgs.py
tests/: test_lookup.py  test_metadata.py  verify_qmd_logic.py
