[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landmapy"
version = "0.3"
dependencies = [
    "cartopy", "geopandas", "hvplot", "matplotlib",
    "numpy", "pandas", "regionmask", "rioxarray"
]
# "os", "re": not found
# "sklearn": deprecated in favor of "scikit-learn"